# Mini-RayTracer

./: .gitignore  Build.bat  CMakeLists.txt  README.md  Settings.aps  Settings.rc  resource.h
RTIOW-One/RTIOW-One/src/: main.cpp
RTIOW-One/RTIOW-One/src/Private/: Application.cpp  Camera.cpp  Color.cpp  Hittable.cpp  HittableList.cpp  Ray.cpp  SoftwareRenderer.cpp  Sphere.cpp
RTIOW-One/RTIOW-One/src/Public/: Camera.h  Commons.h  D2D1Class.h  Hittable.h  HittableList.h  Interval.h  SoftwareRenderer.h  Sphere.h  ThreadPool.h
Resources/: RCa23748  Settings.rc
Shaders/: RayTraceShader.cso
src/: main.cpp
src/Private/: Application.cpp  Camera.cpp  Color.cpp  ComputeShaderManager.cpp  D2D1Class.cpp  D3D11Class.cpp  HardwareRenderer.cpp  Hittable.cpp  HittableList.cpp  Interval.cpp  Lambertian.cpp  Ray.cpp  SoftwareRenderer.cpp  Sphere.cpp  SubMaterials.cpp  ThreadPool.cpp  Timer.cpp  VMaterial.cpp  Vector3D.cpp
src/Public/: Application.h  Camera.h  Color.h  Commons.h  ComputeShaderManager.h  D2D1Class.h  D3D11Class.h  HardwareRenderer.h  Hittable.h  HittableList.h  Interval.h  Lambertian.h  Material.h  Ray.h  SoftwareRenderer.h  Sphere.h  SubMaterials.h  ThreadPool.h  Timer.h  VMaterial.h  Vector3D.h
src/Shaders/: RayTraceComputeShader.hlsl
